# Tomato-Is-All-You-Need

./: README.md
Basket+CAM/: README.md
Basket+CAM/install/: local_setup.sh  setup.sh
Basket+CAM/install/basketCam/share/basketCam/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Basket+CAM/install/basketCam/share/basketCam/launch/: cam.launch.py
Basket+CAM/install/basketCam/share/basketCam/urdf/: cam.xacro
Basket+CAM/log/: latest_build  latest_list
Basket+CAM/src/basketCam/: package.xml  setup.cfg  setup.py
Basket+CAM/src/basketCam/basketCam/: Basket_node.py  DepthCam_node.py  SegAnd3D_node.py
Basket+CAM/src/basketCam/config/: robot.rviz
Basket+CAM/src/basketCam/launch/: cam.launch.py  seg_launch.py
Basket+CAM/src/basketCam/urdf/: cam.xacro
model_fusion/: basket.ipt  cam.ipt  slider.ipt  ur10 under.dxf  로봇팔본체.ipt  바퀴.ipt  바퀴_반대.ipt  본체 수정.ipt  본체.ipt  앞문.ipt  조립품1.iam  조립품2.iam  후눈.ipt
model_fusion/Caster Ball Wheel/: Caster Ball Wheel.ipt
model_fusion/OldVersions/: 로봇팔본체.0002.ipt  본체 수정.0010.ipt  본체.0002.ipt  조립품1.0006.iam
model_fusion/tomato/: leaf.ipt  tomato tree.iam  tomato.ipt  tree.ipt
model_fusion/tomato/OldVersions/: tomato tree.0001.iam  tree.0003.ipt
model_fusion/world/: base.ipt  dirt.ipt  farm pot.ipt  조립품1.iam
model_fusion/world/OldVersions/: dirt.0002.ipt  조립품1.0001.iam
pmt_interfaces/: CMakeLists.txt  package.xml
pmt_interfaces/action/: MoveToPosition.action
